tests/js_error/regexp/annex_b/invalid_braced_quantifier.exp
SyntaxError: Invalid quantifier bounds in regular expression
  ┌ regexp/annex_b/invalid_braced_quantifier.js:2:3
  |
2 | /a{2,1}/;
  |   ^