tests/js_error/regexp/annex_b/invalid_braced_quantifier.js
// Errors in Annex B mode - invalid quantifier is not treated as a pattern
/a{2,1}/;